add a way to exclude modules from stats

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div>
-      <select class="customModulesList" hidden="" id="customModulesList" name="list_box_name[]" size="number_of_options"
+      <select class="modulesList" hidden="" id="customModulesList" name="list_box_name[]" size="number_of_options"
         multiple="single"></select>
     </div>
   </div>
@@ -84,16 +84,16 @@
     <div class="grid-container-form">
       <div id="textName" class="grid-item">Name:</div>
       <div class="grid-item">
-        <input id="moduleAcronym" type="text" value="" placeholder="Hackathon, Event, ...">
+        <input id="moduleAcronymModuleInStats" type="text" value="" placeholder="Hackathon, Event, ...">
       </div>
     </div>
     <div class="grid-container-buttons">
-      <div class="button-left"><input class="button" id="submitModule" type="submit" value="Modul speichern"></div>
-      <div class="button-right"><input class="button" id="removeModule" type="submit" value="Modul entfernen"></div>
+      <div class="button-left"><input class="button" id="submitModuleInStats" type="submit" value="Modul speichern"></div>
+      <div class="button-right"><input class="button" id="removeModuleInStats" type="submit" value="Modul entfernen"></div>
     </div>
 
     <div>
-      <select class="customModulesList" hidden="" id="customModulesList" name="list_box_name[]" size="number_of_options"
+      <select class="modulesList" hidden="" id="ignoreInStatsModulesList" name="list_box_name[]" size="number_of_options"
         multiple="single"></select>
     </div>
   </div>
