add missing grid-item class

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -80,14 +80,17 @@
           <input id="moduleAcronymModuleInStats" type="text" value="" placeholder="Hackathon, Event, ...">
         </div>
       </div>
+      <div class="grid-item">
+        <select class="modulesList" id="allHsluModulesList" name="list_box_name[]" size="number_of_options"
+          multiple="single"></select>
+      </div>
       <div class="grid-container-buttons">
         <div class="button-left"><input class="button" id="submitModuleInStats" type="submit" value="Speichern">
         </div>
         <div class="button-right"><input class="button" id="removeModuleInStats" type="submit" value="Entfernen">
         </div>
       </div>
-
-      <div>
+      <div class="grid-item">
         <select class="modulesList" id="ignoreInStatsModulesList" name="list_box_name[]" size="number_of_options"
           multiple="single"></select>
       </div>
