add language support for new option

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -18,7 +18,7 @@
             </div>
             <!-- Option to add custome modules -->
             <div class="grid-item option" id="customeModuleOption">
-                <h2>Add Module</h2>
+                <h2 id="titleAddModule">Add Module</h2>
                 <div class="grid-item grid-container-option">
                     <div class="grid-item" id="textName">Name:</div>
                     <div class="grid-item">
@@ -99,7 +99,7 @@
             </div>
             <!-- Option to ignore an MyCampus module -->
             <div class="grid-item option hidden" id="removeModuleOption">
-                <h2>Remove Module</h2>
+                <h2 id="titleRemoveModule">Remove Module</h2>
                 <div class="grid-item">
                     <select class="modulesList" id="allHsluModulesList"
                         name="list_box_name[]" size="5"></select>
